# doom-clone

./: .gitignore  CMakeLists.txt
DOOM_CLONE/: CMakeLists.txt
DOOM_CLONE/include/: Entity.h  Game.h  Map.h
DOOM_CLONE/src/: Enemy.cpp  Game.cpp  Renderer.cpp
doom-clone-main/: README.md
doom-clone-main/include/: Renderer.h
include/: Enemy.h  Game.h  Map.h  Menu.h  Player.h  Projectile.h  Renderer.h  SDLWrappers.h  Weapon.h
src/: Enemy.cpp  Entity.cpp  Game.cpp  Map.cpp  Menu.cpp  Player.cpp  Projectile.cpp  Renderer.cpp  Weapon.cpp  main.cpp
tests/: Tests.cpp
